AULA 06 - 02 Métodos da classe Integer